[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Script/Level/Bai_gu_level.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ekaaaho2a2en" path="res://Art/Level/Level_11/BaiGu.png" id="2"]
[ext_resource type="Texture2D" uid="uid://3wpfuowe7kpc" path="res://Art/Level/Level_11/88.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(76.5, 40.5)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(247, 184)
script = null

[sub_resource type="Animation" id="3"]
resource_name = "Show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hide:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.9), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_and_hideInfo"
}]
}
script = null

[sub_resource type="AnimationLibrary" id="4"]
_data = {
"Show": SubResource( "3" )
}
script = null

[node name="BaiGuLevel" type="Node2D"]
script = ExtResource( "1" )

[node name="BaiGu" type="Sprite2D" parent="."]
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="Hide" type="Sprite2D" parent="."]
position = Vector2(-57, 10)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Hurt_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Hurt_" type="CollisionShape2D" parent="Hurt_box"]
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="CheckIn" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
metadata/_edit_lock_ = true

[node name="CheckIN" type="CollisionShape2D" parent="CheckIn"]
position = Vector2(-29.5, 83)
shape = SubResource( "2" )
disabled = true

[node name="Show" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "4" )
}

[node name="Await" type="Timer" parent="."]

[connection signal="area_entered" from="Hurt_box" to="." method="_on_hurt_box_area_entered" flags=18]
[connection signal="body_entered" from="CheckIn" to="." method="_on_check_in_body_entered" flags=18]
[connection signal="body_exited" from="CheckIn" to="." method="_on_check_in_body_exited" flags=18]
[connection signal="timeout" from="Await" to="." method="_on_await_timeout" flags=18]
